--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "firebase": "^4.10.1",
     "prop-types": "^15.6.0",
     "re-base": "3.2.2",
-    "react": "^16.3.0-alpha.1",
+    "react": "^16.4.2",
     "react-dom": "^16.3.0-alpha.1",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
